# study-compiler-java

./: README.md  clear.sh
example/: readlink-demo.sh
example/adder/: adder.jj
study/bison/calc/: build.sh  calc  calc.l  calc.y  lex.yy.c  y.output  y.tab.c  y.tab.h
study/bison/demo/: lex.yy.c  token.l  token.tab.c  token.y  y.tab.h  y.tab.h.gch
study/bison/scanner/: lex.yy.c  parser.y  scanner.l  tcc  test.asm  test.c  y.output  y.tab.c  y.tab.h
study/flex-and-bison/: note.md
study/flex-and-bison/cpp/: ast.h  grammar.y
study/flex-and-bison/flex/fb1-1/: fb1-1.l  flexout  lex.yy.c
study/flex-and-bison/flex/fb1-2/: fb1-2.l  flexout  lex.yy.c
study/flex-and-bison/flex/fb1-3/: fb1-3.l  flexout  lex.yy.c
study/flex-and-bison/flex/fb1-4/: fb1-4.l  flexout  lex.yy.c
study/flex-and-bison/flex/fb1-5/: fb1-5.l  fb1-5.y  lex.yy.c  tcc  y.output  y.tab.c  y.tab.h
study/flex-and-bison/flex/fb2-3/: flexout  lex.yy.c  test
study/flex-and-bison/flex/fb2-4/: Chinese-data  data.txt  flexout  lex.yy.c
study/flex-and-bison/flex/fb2-5/: fb2-5.l  (+2 more)
study/flex-and-bison/flex/golang/: CMakeLists.txt  Makefile  fb1-5.h  fb1-5.l  fb1-5.y  fb1-5funcs.c  lex.yy.c  tcc  test.c  y.output  y.tab.c  y.tab.h
study/flex-and-bison/flex/golang/tcc.dSYM/Contents/Resources/DWARF/: tcc
study/flex-and-bison/flex/golang/test/: test.c  test.cpp
study/gas/: add  add.s  c.sh  call_print.s  echo  echo.s  func1  func1.s  func2  func2.s  hello.s  int-param-func  int-param-func.as  int-param-func.s  loop  loop.s  loop2  loop2.s  print.c  printf-func  printf-func.s  test  test.c  test.s
(+53 files in other folders)
